<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFD180">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:cardBackgroundColor="#EA80FC"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"><![CDATA[>

        ]]>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:visibility="visible"
            tools:visibility="visible">

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="189dp" />

            <TextView
                android:id="@+id/recipeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:capitalize="words"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/addRecipeName"
                android:textAllCaps="false"
                android:textColor="#3F51B5"
                android:textSize="18sp"
                android:textStyle="italic"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/addRecipeName"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/recipeIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="Ingredient(s):"
                android:textColor="#009688"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/servingSizeTitle"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/servingSizeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="Serving Size:"
                android:textColor="#009688"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipeName" />

            <CheckBox
                android:id="@+id/veganCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:clickable="false"
                android:focusable="auto"
                android:focusableInTouchMode="false"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:text="@string/veganOption"
                android:textColorHighlight="#D50000"
                android:textColorLink="#FF80AB"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/servingSizeTitle"
                tools:text="@string/veganOption"
                tools:visibility="visible" />

            <CheckBox
                android:id="@+id/vegetarianCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:text="@string/vegetarianOption"
                android:textColorHighlight="#D50000"
                android:textColorLink="#D50000"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/veganCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/servingSizeTitle"
                tools:text="@string/vegetarianOption"
                tools:visibility="visible" />

            <CheckBox
                android:id="@+id/glutenFreeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:text="@string/glutenFree"
                android:textColorHighlight="#FF80AB"
                android:textColorLink="#FF80AB"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/veganCheckBox"
                tools:text="@string/glutenFree"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintEnd_toStartOf="@+id/glutenFreeCheckBox"
                app:layout_constraintStart_toEndOf="@+id/recipeIngredients"
                app:layout_constraintTop_toBottomOf="@+id/recipeName" />

            <EditText
                android:id="@+id/displayIngredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/recipeIngredients"
                app:layout_constraintTop_toBottomOf="@+id/recipeIngredients" />

            <TextView
                android:id="@+id/displayServingSize"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/vegetarianCheckBox"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintHorizontal_bias="0.227"
                app:layout_constraintStart_toEndOf="@+id/servingSizeTitle"
                app:layout_constraintTop_toBottomOf="@+id/recipeName"
                app:layout_constraintVertical_bias="0.125" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>